syntax = "proto3";

package auth;

option java_package = "com.pm.authservice.grpc";
option java_multiple_files = true;

service AuthService {
  rpc Register(RegisterRequest) returns (BooleanResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string fullname = 3;
  string role = 4;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message BooleanResponse {
  bool status = 1;
}

message LoginResponse {
  bool status = 1;
  string token = 2;
}
